Fix: spacing title & description

--- a/src/scss/components/title.scss
+++ b/src/scss/components/title.scss
@@ -39,3 +39,9 @@
     margin: 0;
   }
 }
+
+.e-gallery-spacing-bottom {
+  & > * {
+    margin-bottom: 15px;
+  }
+}
